--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Google trends en cuarentena </title>
+    <title>Google trends </title>
     <!-- Search Engine -->
-    <meta name="description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta name="image" content="https://profesorfaco.github.io/dno037-2020/clase-09/image-meta.jpg">
-    <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Lorem ipsum">
-    <meta itemprop="description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta itemprop="image" content="https://profesorfaco.github.io/dno037-2020/clase-09/image-meta.jpg">
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Lorem ipsum">
-    <meta name="twitter:description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Lorem ipsum">
-    <meta name="og:description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta name="og:type" content="website">
-    <!-- Fin de los metadatos -->
+<meta name="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Búsquedas de Google en cuarentena">
+<meta itemprop="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta itemprop="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Búsquedas de Google en cuarentena">
+<meta name="twitter:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Búsquedas de Google en cuarentena">
+<meta name="og:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="og:type" content="website">
     <link rel="stylesheet" href="estilo.css">
     <style>
+        
         h2 + p{
             font-size:100%;
             text-align: justify;
@@ -59,8 +59,8 @@
             </ul>
             <p>Por otro lado, hay otras tendencias que dejan preguntas sin responder, por ejemplo, hay palabras como “meat”, “pizza” y “peanut butter bread” que están teniendo su récord en búsquedas a nivel mundial, desde el año 2004 hasta mayo del 2020. No hay una teoría clara que explique este fenómeno, pero probablemente se deba a que las personas en cuarentena extrañan estos alimentos, desean consumirlos en situaciones que ahora son especiales, como una reunión (presencial) con amigos.</p>
             <figure>
-                <img src="image-home.jpg" src="describe lo que se ven la imagen">
-                <figcaption>Describe la imagen en relación al asunto del artículo.</figcaption>
+                <img src="image-home.jpg" alt="Aplicación de deplivery de pizza">
+                <figcaption> Locales y apps que cuentan con delivery han <a href="https://www.latercera.com/la-tercera-domingo/noticia/delivery-pedir-o-no-pedir-es-el-dilema/Y2327ZC6JRGDDD6AEAWZL7DH5I/">aumentado sus ventas en un 120% </a> </figcaption>
             </figure>
             <p>Podemos ver entonces que las tendencias de búsqueda por lo general se van a ver regidas por lo que esté ocurriendo a nivel nacional o mundial, ya sea el salto a la fama de una cantante, un escándalo político, un video viral, etc. Finalmente es el individuo quien puede hacer que una palabra sea tendencia o no, lo que siempre dependerá de su interés.</p>
         </section>
