--- a/page-1.html
+++ b/page-1.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Google trends en cuarentena</title>
+    <title>Google trends </title>
     <!-- Search Engine -->
-    <meta name="description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta name="image" content="https://profesorfaco.github.io/dno037-2020/clase-09/image-meta.jpg">
-    <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Lorem ipsum">
-    <meta itemprop="description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta itemprop="image" content="https://profesorfaco.github.io/dno037-2020/clase-09/image-meta.jpg">
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Lorem ipsum">
-    <meta name="twitter:description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Lorem ipsum">
-    <meta name="og:description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta name="og:type" content="website">
-    <!-- Fin de los metadatos -->
+   <meta name="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Búsquedas de Google en cuarentena">
+<meta itemprop="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta itemprop="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Búsquedas de Google en cuarentena">
+<meta name="twitter:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Búsquedas de Google en cuarentena">
+<meta name="og:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="og:type" content="website">
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -39,15 +38,15 @@
         <section>
             <h2>Deporte en casa</h2>
             <p>Esta pandemia está afectandonos en la gran mayoría de los ámbitos de nuestra vida. Hemos tenido que dejar de hacer algunas cosas y comenzar a hacer otras. En este caso, muchas personas se han visto obligadas a llevar su rutina de deporte a su hogar, adaptándola para que sea adecuada para su espacio.</p>
-            <p>Desde antes de la pandemia existían diversas rutinas de deporte que estaban adaptadas para que se realicen dentro del hogar, y para eso utilizaban escaleras y sillas como soporte o botellas de agua como pesas. Sin embargo, este tipo de rutinas ha tenido un segundo boom con la cuarentena, siendo rutinas muy simples que se ven representadas generalmente en videos. Se usaron los siguientes términos de búsqueda en relación al deporte: “routine”, “abs”, “exercise”, “workout” y “weight loss”. Para comparar el resultado de cada palabra, se utilizaron los siguientes parámetros de información:</p>
+            <p>Desde antes de la pandemia existían diversas rutinas de deporte que estaban adaptadas para que se realicen dentro del hogar, y para eso utilizaban escaleras y sillas como soporte o botellas de agua como pesas. Sin embargo, este tipo de rutinas ha tenido un segundo boom con la cuarentena, siendo rutinas muy simples que se ven representadas generalmente en videos. Se usaron los siguientes términos de búsqueda en relación al deporte: <strong>“routine”, “abs”, “exercise”, “workout” y “weight loss”.</strong> Para comparar el resultado de cada palabra, se utilizaron los siguientes parámetros de información:</p>
             <dl>
                 <dt>Interés a lo largo del tiempo</dt>
-                <dd>Se refiere al interés que ha existido en relación a esa palabra en los últimos tres meses en todo el mundo. El valor 100 indica la popularidad máxima, 50 indica que es la mitad de popular en relación con el valor máximo, 0 indica que no hay suficientes datos sobre la palabra.</dd>
+                <dd>Se refiere al interés máximo que ha existido en relación a esa palabra en los últimos tres meses en todo el mundo. El valor 100 indica la popularidad máxima, 50 indica que es la mitad de popular en relación con el valor máximo, 0 indica que no hay suficientes datos sobre la palabra.</dd>
                 <dt>Variabilidad</dt>
-                <dd>Se refiere a cuánto más o menos se está buscando cada palabra en Google. El resultado se obtiene comparando el interés de la palabra hace 1 año con el de hoy.</dd>
+                <dd>Se refiere a cuánto más se está buscando cada palabra en Google. El porcentaje se obtiene comparando el interés de la palabra hace 1 año con el de hoy.</dd>
                 <dt>Ciudad más interesada</dt>
                 <dd>Se refiere a la ciudad que más buscó la palabra, mostrando mayor interés.</dd>
-                <dt>Consultas en aumento</dt>
+                <dt>Consultas relacionadas en aumento</dt>
                 <dd>Se refiere a las palabras relacionadas que, en los últimos 90 días, ha aumentando su popularidad rápidamente.</dd>                   
             </dl>
             <p>En la siguiente tabla se pueden observar los resultados de las cinco palabras mencionadas anteriormente bajo los cuatro conceptos descritos. En la tabla se puede ver que hay dos polos de ciudades que buscan estas palabras: ciudades pertenecientes a norteamérica y ciudades pertenecientes a el continente asiático.</p>
@@ -55,53 +54,53 @@
 
                 <thead>
                     <tr>
-                        <th scope="col">T</th>
-                        <th scope="col">TABLE HEADER</th>
-                        <th scope="col">TABLE HEADER</th>
-                        <th scope="col">TABLE HEADER</th>
-                        <th scope="col">TABLE HEADER</th>
+                        <th scope="col">Término</th>
+                        <th scope="col">Interés</th>
+                        <th scope="col">Variabilidad</th>
+                        <th scope="col">Ciudad</th>
+                        <th scope="col">Consultas</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
+                        <th scope="row">Routine</th>
+                        <td>15</td>
+                        <td>12,5%</td>
+                        <td>Chittagong,Bangladés</td>
+                        <td>workout routine</td>
                     </tr>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>t78ata</td>
-                        <td>table data</td>
-                        <td>table data</td>
+                        <th scope="row">Abs</th>
+                        <td>32</td>
+                        <td>8,8%</td>
+                        <td>Makati, Filipinas</td>
+                        <td>abs workout</td>
                     </tr>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
+                        <th scope="row">Exercise</th>
+                        <td>77</td>
+                        <td>39,5%</td>
+                        <td>Nueva Delhi, India</td>
+                        <td>how to exercise</td>
                     </tr>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
+                        <th scope="row">Workout</th>
+                        <td>99</td>
+                        <td>41%</td>
+                        <td>San Diego, E.E.U.U.</td>
+                        <td>thome workout</td>
                     </tr>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
+                        <th scope="row">Weight Loss</th>
+                        <td>36</td>
+                        <td>9,8%</td>
+                        <td>Nueva York, E.E.U.U.</td>
+                        <td>best weight loss</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="5">Indica fuente(s) de los datos</td>
+                        <td colspan="5"> <a href="https://trends.google.com/trends/explore?date=today%203-m&q=routine,abs,exercise,workout,weight%20loss"> Fuente: Google Trends <a></td>
                     </tr>
                 </tfoot>
 
