--- a/page-2.html
+++ b/page-2.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Google trends en cuarentena</title>
+    <title>Google trends </title>
     <!-- Search Engine -->
-    <meta name="description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta name="image" content="http://profesorfaco.github.io/clase-09/image-meta.jpg">
-    <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Lorem ipsum">
-    <meta itemprop="description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta itemprop="image" content="http://profesorfaco.github.io/clase-09/image-meta.jpg">
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Lorem ipsum">
-    <meta name="twitter:description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Lorem ipsum">
-    <meta name="og:description" content="Quisque volutpat ante aliquet, vulputate magna pellentesque, facilisis lorem.">
-    <meta name="og:type" content="website">
-    <!-- Fin de los metadatos -->
+    <meta name="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Búsquedas de Google en cuarentena">
+<meta itemprop="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta itemprop="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Búsquedas de Google en cuarentena">
+<meta name="twitter:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Búsquedas de Google en cuarentena">
+<meta name="og:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="og:type" content="website">
     <link rel="stylesheet" href="estilo.css">
     <style>
         figure {
@@ -49,12 +48,12 @@
         <section>
             <h2>Fenómeno de la cocina en cuarentena</h2>
             <p>Otra de las tendencias que ha marcado lo que llevamos de cuarentena es la motivación por cocinar, la cual no parece tener muchas barreras, ya que en redes sociales se puede ver todo tipo de recetas adaptado a varias realidades. ¿Estaremos viviendo la democratización de la cocina?</p>
-            <p>Al igual que la sección <a href="page-1.html">Deporte en casa,</a> aquí tomaremos el fenómeno del aumento importante de cocinar en casa. Muchas de las recetas que circulan por Youtube, Instagram o TikTok, son recetas fáciles y prometedoras. Por ejemplo, el 9 de abril una youtuber cocinera subió un video titulado: <a href="https://www.youtube.com/watch?v=olHw-8py9K0"> 5 Minute CHOCOLATE CAKE ! NO Oven - NO Pan - Easy Chocolate Cake Recipe </a> Por supuesto que el resultado se veía increíble, pero al principio del video explica que las características de la receta se basan en comentarios del público que le piden que compartiera una receta sin horno, dado que no todos tienen. Esto demuestra que el espíritu cocinero, o quizás los antojos, se ha manifestado fuertemente esta cuarentena. En esta oportunidad se comparó el interés a lo largo del tiempo de las palabras “baking”, “cooking”, “banana bread”, “bread” y “cake”.</p>
+            <p>Al igual que la sección <a href="page-1.html">Deporte en casa,</a> aquí tomaremos el fenómeno del aumento importante de cocinar en casa. Muchas de las recetas que circulan por Youtube, Instagram o TikTok, son recetas fáciles y prometedoras. Por ejemplo, el 9 de abril una youtuber cocinera subió un video titulado: <a href="https://www.youtube.com/watch?v=olHw-8py9K0"> 5 Minute CHOCOLATE CAKE ! NO Oven - NO Pan - Easy Chocolate Cake Recipe</a> Por supuesto que el resultado se veía increíble, pero al principio del video explica que las características de la receta se basan en comentarios del público que le piden que compartiera una receta sin horno, dado que no todos tienen. Esto demuestra que el espíritu cocinero, o quizás los antojos, se ha manifestado fuertemente esta cuarentena. En esta oportunidad se comparó el interés a lo largo del tiempo de las palabras <strong>“baking”, “cooking”, “banana bread”, “bread” y “cake”.</strong></p>
             <figure>
                 <canvas id="uci"></canvas>
-                <figcaption>Indica fuente(s) de los datos</figcaption>
+                <figcaption><a href="https://trends.google.com/trends/explore?date=today%201-m&q=baking,cooking,banana%20bread,bread,cake">Google Trends<a></figcaption>
             </figure>
-            <p>Si observamos, se puede apreciar que ha habido una batalla de búsquedas entre la palabra “bread” y “cake”. “Bread” puede haberle quitado el trono momentáneamente a “cake” debido a que siempre que ocurren catástrofes que afectarán la normalidad, nace un pánico colectivo que lleva a las personas a comprar más de lo necesario y comenzar a elaborar sus propios alimentos, como el pan. Por otro lado, cabe destacar que el mes pasado, en Estados Unidos, “banana bread” fue la receta más buscada, impulsada por la ciudad de Seattle. </p>
+            <p>Si observamos, se puede apreciar que ha habido una batalla de búsquedas entre la palabra <strong>“bread” y “cake”</strong>. “Bread” puede haberle quitado el trono momentáneamente a “cake” debido a que siempre que ocurren catástrofes que afectarán la normalidad, nace un pánico colectivo que lleva a las personas a comprar más de lo necesario y comenzar a elaborar sus propios alimentos, como el pan. Por otro lado, cabe destacar que el mes pasado, en Estados Unidos, “banana bread” fue la receta más buscada, impulsada por la ciudad de Seattle. </p>
         </section>
         <footer>
             <hr>
@@ -71,36 +70,54 @@
             data: {
                 labels: ["01/04", "02/04", "03/04", "04/04", "05/04", "06/04", "07/04", "08/04", "09/04", "10/04", "11/04", "12/04", "13/04", "14/04", "15/04", "16/04", "17/04", "18/04", "19/04", "20/04", "21/04", "22/04", "23/04", "24/04", "25/04", "26/04", "27/04", "28/04", "29/04", "30/04"],
                 datasets: [{
-                    label: 'CHILE',
-                    borderColor: '#cc2f59',
-                    backgroundColor: '#cc2f59',
+                    label: 'baking',
+                    borderColor: '#ff5200',
+                    backgroundColor: '#ff5200',
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
-                    data: [16, 18, 22, 27, 34, 37, 43, 48, 57, 65, 73, 80, 82, 92, 94, 105, 116, 126, 133, 139, 147, 160, 168, 174, 181, 189, 198, 207]
+                    data: [19, 18, 22, 27, 34, 37, 43, 48, 57, 65, 73, 80, 82, 92, 94, 105, 116, 126, 133, 139, 147, 160, 168, 174, 181, 189, 198, 207]
                 }, {
-                    label: 'ARGENTINA',
-                    borderColor: '#2b89f5',
-                    backgroundColor: '#2b89f5',
+                    label: 'cooking',
+                    borderColor: '#d32f2f',
+                    backgroundColor: '#d32f2f',
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
                     data: [28, 36, 39, 43, 44, 48, 56, 63, 72, 82, 83, 90, 97, 102, 111, 115, 123, 129, 132, 136, 147, 152, 165, 176, 185, 192, 197, 207]
                 }, {
-                    label: 'ECUADOR',
+                    label: 'banana bread',
                     borderColor: '#6d2b65', // noten que este color coincide con el de h1{…} en el CSS
                     backgroundColor: '#6d2b65', // esto para darle consistencia a los colores en uso
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
                     data: [93, 120, 145, 172, 180, 191, 191, 242, 272, 297, 315, 333, 355, 369, 388, 403, 421, 456, 474, 507, 520, 537, 560, 576, 576, 576, 663, 871]
-                }]
+                }, {
+                    label: 'bread',
+                    borderColor: '#00263b', // noten que este color coincide con el de h1{…} en el CSS
+                    backgroundColor: '#00263b', // esto para darle consistencia a los colores en uso
+                    borderWidth: 1,
+                    pointRadius: 2,
+                    lineTension: 0,
+                    data: [93, 120, 145, 172, 180, 191, 191, 242, 272, 297, 315, 333, 355, 369, 388, 403, 421, 456, 474, 507, 520, 537, 560, 576, 576, 576, 663, 871]
+                }, {
+                    label: 'cake',
+                    borderColor: '#00a1ab', // noten que este color coincide con el de h1{…} en el CSS
+                    backgroundColor: '#00a1ab', // esto para darle consistencia a los colores en uso
+                    borderWidth: 1,
+                    pointRadius: 2,
+                    lineTension: 0,
+                    data: [93, 120, 145, 172, 180, 191, 191, 242, 272, 297, 315, 333, 355, 369, 388, 403, 421, 456, 474, 507, 520, 537, 560, 576, 576, 576, 663, 871]
+                }
+                ]
+
             },
             options: {
                 responsive: true,
                 title: {
                     display: true,
-                    text: 'MUERTES POR COVID19 DURANTE ABRIL, 2020'
+                    text: 'Comparación entre palabras “baking”, “cooking”, “banana bread”, “bread” y “cake”, 5 de mayo del 2020'
                 },
                 tooltips: {
                     position: 'nearest',
