--- a/page-2.html
+++ b/page-2.html
@@ -48,7 +48,7 @@
         <section>
             <h2>Fenómeno de la cocina en cuarentena</h2>
             <p>Otra de las tendencias que ha marcado lo que llevamos de cuarentena es la motivación por cocinar, la cual no parece tener muchas barreras, ya que en redes sociales se puede ver todo tipo de recetas adaptado a varias realidades. ¿Estaremos viviendo la democratización de la cocina?</p>
-            <p>Al igual que la sección <a href="page-1.html">Deporte en casa,</a> aquí tomaremos el fenómeno del aumento importante de cocinar en casa. Muchas de las recetas que circulan por Youtube, Instagram o TikTok, son recetas fáciles y prometedoras. Por ejemplo, el 9 de abril una youtuber cocinera subió un video titulado: <a href="https://www.youtube.com/watch?v=olHw-8py9K0"> 5 Minute CHOCOLATE CAKE ! NO Oven - NO Pan - Easy Chocolate Cake Recipe</a> Por supuesto que el resultado se veía increíble, pero al principio del video explica que las características de la receta se basan en comentarios del público que le piden que compartiera una receta sin horno, dado que no todos tienen. Esto demuestra que el espíritu cocinero, o quizás los antojos, se ha manifestado fuertemente esta cuarentena. En esta oportunidad se comparó el interés a lo largo del tiempo de las palabras <strong>“baking”, “cooking”, “banana bread”, “bread” y “cake”.</strong></p>
+            <p>Al igual que la sección <a href="page-1.html">Deporte en casa,</a> aquí tomaremos el fenómeno del aumento importante de cocinar en casa. Muchas de las recetas que circulan por Youtube, Instagram o TikTok, son recetas fáciles y prometedoras. Por ejemplo, el 9 de abril una youtuber cocinera subió un video titulado: <a href="https://www.youtube.com/watch?v=olHw-8py9K0"> 5 Minute CHOCOLATE CAKE ! NO Oven - NO Pan - Easy Chocolate Cake Recipe</a> Por supuesto que el resultado se veía increíble, pero al principio del video explica que las características de la receta se basan en comentarios del público que le piden que compartiera una receta sin horno, dado que no todos tienen. Esto demuestra que el espíritu cocinero, o quizás los antojos, se ha manifestado fuertemente esta cuarentena. En esta oportunidad se comparó el interés a lo largo de abril y principios de mayo de las palabras <strong>“baking”, “cooking”, “banana bread”, “bread” y “cake”.</strong></p>
             <figure>
                 <canvas id="uci"></canvas>
                 <figcaption><a href="https://trends.google.com/trends/explore?date=today%201-m&q=baking,cooking,banana%20bread,bread,cake">Google Trends<a></figcaption>
@@ -68,7 +68,7 @@
         new Chart(document.getElementById('uci').getContext('2d'), {
             type: 'bar',
             data: {
-                labels: ["01/04", "02/04", "03/04", "04/04", "05/04", "06/04", "07/04", "08/04", "09/04", "10/04", "11/04", "12/04", "13/04", "14/04", "15/04", "16/04", "17/04", "18/04", "19/04", "20/04", "21/04", "22/04", "23/04", "24/04", "25/04", "26/04", "27/04", "28/04", "29/04", "30/04"],
+                labels: ["06/04", "07/04", "08/04", "09/04", "10/04", "11/04", "12/04", "13/04", "14/04", "15/04", "16/04", "17/04", "18/04", "19/04", "20/04", "21/04", "22/04", "23/04", "24/04", "25/04", "26/04", "27/04", "28/04", "29/04", "30/04", "01/05", "02/05", "03/05"],
                 datasets: [{
                     label: 'baking',
                     borderColor: '#ff5200',
@@ -76,7 +76,7 @@
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
-                    data: [19, 18, 22, 27, 34, 37, 43, 48, 57, 65, 73, 80, 82, 92, 94, 105, 116, 126, 133, 139, 147, 160, 168, 174, 181, 189, 198, 207]
+                    data: [19, 19, 19, 20, 23, 27, 28, 20, 19, 19, 19, 19, 25, 24, 18, 18, 19, 18, 19, 22, 25, 18, 19, 19, 18, 19, 23, 23]
                 }, {
                     label: 'cooking',
                     borderColor: '#d32f2f',
@@ -84,7 +84,7 @@
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
-                    data: [28, 36, 39, 43, 44, 48, 56, 63, 72, 82, 83, 90, 97, 102, 111, 115, 123, 129, 132, 136, 147, 152, 165, 176, 185, 192, 197, 207]
+                    data: [20, 19, 20, 19, 23, 27, 43, 22, 20, 20, 19, 20, 25, 27, 20, 19, 20, 20, 19, 23, 27, 19, 19, 19, 19, 20, 23, 26]
                 }, {
                     label: 'banana bread',
                     borderColor: '#6d2b65', // noten que este color coincide con el de h1{…} en el CSS
@@ -92,15 +92,15 @@
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
-                    data: [93, 120, 145, 172, 180, 191, 191, 242, 272, 297, 315, 333, 355, 369, 388, 403, 421, 456, 474, 507, 520, 537, 560, 576, 576, 576, 663, 871]
+                    data: [10, 11, 10, 10, 11, 13, 12, 11, 10, 10, 9, 10, 13, 14, 8, 9, 9, 9, 8, 11, 12, 9, 9, 8, 8, 9, 10, 11]
                 }, {
                     label: 'bread',
-                    borderColor: '#00263b', // noten que este color coincide con el de h1{…} en el CSS
-                    backgroundColor: '#00263b', // esto para darle consistencia a los colores en uso
+                    borderColor: '#ffb400', // noten que este color coincide con el de h1{…} en el CSS
+                    backgroundColor: '#ffb400', // esto para darle consistencia a los colores en uso
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
-                    data: [93, 120, 145, 172, 180, 191, 191, 242, 272, 297, 315, 333, 355, 369, 388, 403, 421, 456, 474, 507, 520, 537, 560, 576, 576, 576, 663, 871]
+                    data: [51, 52, 54, 57, 64, 72, 67, 54, 49, 48, 50, 52, 67, 65, 48, 47, 47, 46, 46, 59, 62, 48, 47, 47, 46, 50, 57, 56]
                 }, {
                     label: 'cake',
                     borderColor: '#00a1ab', // noten que este color coincide con el de h1{…} en el CSS
@@ -108,7 +108,7 @@
                     borderWidth: 1,
                     pointRadius: 2,
                     lineTension: 0,
-                    data: [93, 120, 145, 172, 180, 191, 191, 242, 272, 297, 315, 333, 355, 369, 388, 403, 421, 456, 474, 507, 520, 537, 560, 576, 576, 576, 663, 871]
+                    data: [64, 67, 69, 73, 83, 100, 98, 69, 64, 65, 65, 71, 87, 85, 67, 67, 68, 66, 68, 83, 84, 67, 71, 69, 73, 79, 86, 89]
                 }
                 ]
 
