--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Google trends </title>
-    <!-- Search Engine -->
-<meta name="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
-<meta name="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<title>Jugando con Google Trends</title>
+<!-- Search Engine -->
+<meta name="description" content="Cuando tenemos interés sobre un tema recurrimos a Google. Con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="image" content="https://i.ibb.co/8dCyvyn/image-bg.jpg">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="Búsquedas de Google en cuarentena">
-<meta itemprop="description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
-<meta itemprop="image" content="https://github.com/maidalw/clase-09/blob/gh-pages/image-meta.jpg">
+<meta itemprop="name" content="Jugando con Google Trends">
+<meta itemprop="description" content="Cuando tenemos interés sobre un tema recurrimos a Google. Con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta itemprop="image" content="https://i.ibb.co/8dCyvyn/image-bg.jpg">
 <!-- Twitter -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Búsquedas de Google en cuarentena">
-<meta name="twitter:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="twitter:title" content="Jugando con Google Trends">
+<meta name="twitter:description" content="Cuando tenemos interés sobre un tema recurrimos a Google. Con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="Búsquedas de Google en cuarentena">
-<meta name="og:description" content="Siempre que tenemos interés sobre un tema en específico recurrimos a Google. Pero, con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
+<meta name="og:title" content="Jugando con Google Trends">
+<meta name="og:description" content="Cuando tenemos interés sobre un tema recurrimos a Google. Con la pandemia, las búsquedas cambiaron su rumbo hacia dos marcadas tendencias.">
 <meta name="og:type" content="website">
     <link rel="stylesheet" href="estilo.css">
     <style>
@@ -45,19 +45,19 @@
             <h4>Google tiene la respuesta</h4>
         </header>
         <section>
-            <p>Desde que se conoció la existencia del COVID-19, las tendencias de búsqueda se orientaron hacia el virus en sí: cuáles eran los síntomas, el balance diario por país, las medidas para prevenir el contagio, tratamientos y también estadísticas. Pero ya hacia principios de abril, las búsquedas han tomado un rumbo distinto. Esto se debe a que pasado algunos meses desde el esparcimiento del virus, la gran mayoría del mundo ya tiene una noción de lo que es el virus. Por otro lado, la vida en cuarentena ha abierto una ventana de curiosidades, a la que buscamos la respuesta en Google:</p>
+            <p>Desde que se conoció la existencia del COVID-19, las tendencias de búsqueda se orientaron hacia el virus en sí: cuáles eran los síntomas, el balance diario por país, las medidas para prevenir el contagio, tratamientos y también estadísticas. Pero ya hacia principios de abril, las búsquedas han tomado un camino distinto. Esto se debe a que pasado algunos meses desde el esparcimiento del virus, la gran mayoría del mundo ya tiene una noción de lo que es el virus. Por otro lado, la vida en cuarentena ha abierto una ventana de curiosidades, a la que buscamos la respuesta en Google:</p>
             <blockquote cite="https://…">
                 <p>“Hay búsquedas que hubieran parecido raras hace unas seis semanas atrás que ya no son tan raras ahora” </p>
                 <footer><a href="https://www.vox.com/recode/2020/5/5/21243854/google-trends-search-coronavirus-simon-rogers">Simon Rogers</a></footer>
             </blockquote>
-            <p>Este fenómeno se ve favorecido por la “privacidad” del mismo buscador, debido a que las personas al buscar en Google son extremadamente honestas, no tienen vergüenza ni son criticados. Las búsquedas “raras” pueden ser elementos como “Drive-by birthday party” o “cómo hacer una cera casera para depilar”, las que hoy se pueden entender dado el contexto de cuarentena.</p>
+            <p>Este fenómeno se ve favorecido por la “privacidad” del mismo buscador, debido a que las personas al buscar en Google son extremadamente honestas, no tienen vergüenza ni son criticados. Las búsquedas “raras” pueden ser elementos como <strong>“drive-by birthday party”</strong> o <strong>“cómo hacer una cera casera para depilar”</strong>, las que hoy se pueden entender dado el contexto de cuarentena.</p>
             <h2>Nuevas normalidades</h2>
             <p>A causa de la situación actual, poco a poco ciertas actividades han tomado un nuevo protagonismo en nuestras vidas, naciendo así nuevas normalidades, como cocinar más frecuentemente, hacer deporte en cada, trabajar remotamente, aprender a través de clases gratis, ver videos que se estén transmitiendo en directo, etc. Hay dos tendencias que han visto más presentes en los últimos dos meses:</p>
             <ul>
                 <li><a href="page-1.html">Deporte en casa</a></li>
                 <li><a href="page-2.html">Fenómeno de la cocina en cuarentena</a></li>
             </ul>
-            <p>Por otro lado, hay otras tendencias que dejan preguntas sin responder, por ejemplo, hay palabras como “meat”, “pizza” y “peanut butter bread” que están teniendo su récord en búsquedas a nivel mundial, desde el año 2004 hasta mayo del 2020. No hay una teoría clara que explique este fenómeno, pero probablemente se deba a que las personas en cuarentena extrañan estos alimentos, desean consumirlos en situaciones que ahora son especiales, como una reunión (presencial) con amigos.</p>
+            <p>Por otro lado, hay otras tendencias que dejan preguntas sin responder. Por ejemplo, hay palabras como “meat”, “pizza” y “peanut butter bread” que están teniendo su récord en búsquedas a nivel mundial, desde el año 2004 hasta mayo del 2020. No hay una teoría clara que explique este fenómeno, pero probablemente se deba a que las personas en cuarentena extrañan estos alimentos, desean consumirlos en situaciones que ahora son especiales, como una reunión (presencial) con amigos.</p>
             <figure>
                 <img src="image-home.jpg" alt="Aplicación de deplivery de pizza">
                 <figcaption> Locales y apps que cuentan con delivery han <a href="https://www.latercera.com/la-tercera-domingo/noticia/delivery-pedir-o-no-pedir-es-el-dilema/Y2327ZC6JRGDDD6AEAWZL7DH5I/">aumentado sus ventas en un 120% </a> </figcaption>
